--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,14 @@
 {% extends 'base.html' %}
+
+
+<!-- Page Title-->
+{% block title %}Home{%endblock %}
+
+
+<!-- Page Content -->
+
+{% block body %}
+
+<h2>Welcome to Image Sharer!</h2>
+
+{% endblock %}
