Adding context data and use of Django variable

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,7 @@
 
 {% block body %}
 
-<h2>Welcome to Image Sharer!</h2>
+<!-- Django dynamic variable -->
+<h2>{{greeting_message}}</h2>
 
 {% endblock %}
