--- a/templates/home.html
+++ b/templates/home.html
@@ -11,26 +11,39 @@
 <!-- Page Content -->
 
 {% block body %}
+<div class="row">
+    <!-- display dynamic posts in the form of django loop -->
+    {% for post in posts %}
 
-<a href="{% url 'feed:post' %}">&rarr; Add new Post</a>
-<hr>
+    <div class="col-sm-6 col-md-3">
 
-<!-- display dynamic posts in the form of django loop -->
-{% for post in posts %}
+        <!-- Bootstrap Card for posts-->
+        <div class="card my-4">
+            {% thumbnail post.image "200x200" crop="center" as im %}
+            <img src="{{ im.url }}" class="card-img-top" alt="...">
+            {% endthumbnail %}
 
-<!-- Make content clickable -->
-<a href="{% url 'feed:detail' post.id %}" style="display: inline-block;">
-    <!-- Django dynamic variable -->
-    <h2>{{post.text}}</h2>
+            <div class="card-body">
+                <p class="card-text">
+                    <!-- Django dynamic variable -->
+                    {{post.text}}
+                </p>
+                <a href="{% url 'feed:detail' post.id %}" class="btn btn-primary">View Full Image</a>
+            </div>
+        </div>
+    </div>
 
-    {% thumbnail post.image "200x200" crop="center" as im %}
-    <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
-    {% endthumbnail %}
-</a>
+    <!-- What if there is not post -->
+    {% empty %}
+    <div class="col-sm-6 offset-3 text-center py-5 my-5">
+        <h3>Welcome!</h3>
+        <p>Add your first image?</p>
+        <a href="{% url 'feed:post' %}" class="btn btn-lg btn-success">Upload image</a>
 
-<hr>
+    </div>
 
-{% endfor %}
+    {% endfor %}
 
+</div>
 
 {% endblock %}
