--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap CSS CDN -->
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+
     <title>
         {% block title %}Default{% endblock %}
     </title>
@@ -12,17 +16,28 @@
 
 <body>
 
+    <!-- navbar -->
+    {% include 'includes/navbar.html' %}
+
     <!-- Display Success Messages in the form of Session using Django messages framework -->
     {% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
-        <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
-            {% endfor %}
-    </ul>
+    {% for message in messages %}
+    <!-- Success Message Box -->
+    <div
+        class="bg-{% if message.tags %}{{ message.tags }} {% else %}success{% endif %} bg-gradient text-center text-white py-4">
+        {{ message }}
+    </div>
+    {% endfor %}
     {% endif %}
 
 
-    {% block body %}{% endblock %}
+    <!-- Main container -->
+    <div class="container">
+        <!-- body template block -->
+        {% block body %}
+
+        {% endblock %}
+    </div>
 
 </body>
 
